--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "asperitas",
-  "name": "asperitas",
+  "short_name": "htdiscuss",
+  "name": "htdiscuss",
   "icons": [
     {
       "src": "favicon.ico",
